--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -9,19 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul ngbNav #nav="ngbNav" class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
         <li ngbNavItem *ngIf="!profileScreen">
-          <a ngbNavLink (click)="selectCategory('Móviles')" [class.active]="selectedCategory === 'Móviles'" [routerLink]="['']" [queryParams]="{filter: 'moviles'}">Móviles</a>
+          <a ngbNavLink (click)="selectCategory('Móviles')">Móviles</a>
         </li>
         <li ngbNavItem *ngIf="!profileScreen">
-          <a ngbNavLink (click)="selectCategory('Ordenadores')" [class.active]="selectedCategory === 'Ordenadores'" [routerLink]="['']" [queryParams]="{filter: 'ordenadores'}">Ordenadores</a>
+          <a ngbNavLink (click)="selectCategory('Ordenadores')">Ordenadores</a>
         </li>
         <li ngbNavItem *ngIf="!profileScreen">
-          <a ngbNavLink (click)="selectCategory('Auriculares')" [class.active]="selectedCategory === 'Auriculares'" [routerLink]="['']" [queryParams]="{filter: 'auriculares'}">Auriculares</a>
+          <a ngbNavLink (click)="selectCategory('Auriculares')" [class.active]="selectedCategory === 'Auriculares'">Auriculares</a>
         </li>
         <li ngbNavItem *ngIf="!profileScreen">
-          <a ngbNavLink (click)="selectCategory('SmartWatches')" [class.active]="selectedCategory === 'SmartWatches'" [routerLink]="['']" [queryParams]="{filter: 'smartwatches'}">SmartWatches</a>
+          <a ngbNavLink (click)="selectCategory('SmartWatches')" [class.active]="selectedCategory === 'SmartWatches'">SmartWatches</a>
         </li>
         <li ngbNavItem *ngIf="!profileScreen">
-          <a ngbNavLink (click)="selectCategory('Otros')" [class.active]="selectedCategory === 'Otros'" [routerLink]="['']" [queryParams]="{filter: 'otros'}">Otros</a>
+          <a ngbNavLink (click)="selectCategory('Otros')" [class.active]="selectedCategory === 'Otros'">Otros</a>
         </li>
         <li ngbNavItem *ngIf="profileScreen && isOwner">
           <a ngbNavLink (click)="selectCategory('favorites')" [class.active]="selectedCategory === 'favorites'" [routerLink]="['/profile']" [queryParams]="{filter: 'favorites'}">Favoritos</a>
