--- a/frontend/src/app/components/user/profile/profile.component.html
+++ b/frontend/src/app/components/user/profile/profile.component.html
@@ -54,16 +54,11 @@
                 [fromProfile]="true"></app-product-list>
         </div>
     </div>
-    <div *ngIf="filter && filter == 'reviews' && profileId">
+
+    <div *ngIf="filter && filter == 'reviews' && profileId;">
         <app-profile-reviews 
             [title]="'Reseñas'" 
             [userId]="profileId">
-        </app-profile-reviews>
-    </div>
-    <div *ngIf="filter && filter == 'reviews' && user">
-        <app-profile-reviews 
-            [title]="'Reseñas'" 
-            [userId]="user.id">
         </app-profile-reviews>
     </div>
     
