--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -44,7 +44,7 @@
                     </a>
                 </div>
                 <div class="col-3 header-profile justify-content-end" height="55">
-                    <a href="/adminProfile" class="d-flex align-items-center text-decoration-none">
+                    <a [routerLink]="'/profile'" class="d-flex align-items-center text-decoration-none">
                         <div>
                             <ng-template #hasImage [ngTemplateOutlet]="user?.hasImage ? hasImage : noImage">
                                 <img class="profilePic" [src]="user?.image" alt="pfp">
@@ -91,7 +91,7 @@
                 </div>
                 
                 <div class="col-3 header-profile justify-content-end" height="55">
-                    <a href="/profile" class="d-flex align-items-center text-decoration-none">
+                    <a [routerLink]="'/profile'" class="d-flex align-items-center text-decoration-none">
                         <div>
                             <ng-template #hasImage [ngTemplateOutlet]="user?.hasImage ? hasImage : noImage">
                                 <img class="profilePic" [src]="user?.image" alt="pfp">
