--- a/frontend/src/app/components/reports/report-list/report-list.component.html
+++ b/frontend/src/app/components/reports/report-list/report-list.component.html
@@ -29,7 +29,7 @@
       </div>
 
       <div *ngIf="!loading && reports.length === 0" class="text-center">
-        <h3 class="py-4 mb-4 defaultText">No hay reportes pendientes</h3>
+        <h3 class="py-4 mb-4 defaultText text-secondary">No hay reportes pendientes</h3>
       </div>
     </div>
   </div>
