--- a/frontend/src/app/components/user/user-stats-chart/user-stats-chart.component.html
+++ b/frontend/src/app/components/user/user-stats-chart/user-stats-chart.component.html
@@ -5,5 +5,6 @@
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
   [legend]="showLegend"
+  [legendTitle]="'Mi actividad'"
   [yAxisTickFormatting]="yAxisTickFormatting">
 </ngx-charts-line-chart>
