--- a/frontend/src/app/components/reviews/review-list/review-list.component.html
+++ b/frontend/src/app/components/reviews/review-list/review-list.component.html
@@ -1,29 +1,22 @@
-<div *ngIf="reviews.length > 0; else noReviews" class="container mt-4">
-    <h2 class="fw-bolder mb-3">Reseñas</h2>
-        <div class="row">
-            <div *ngFor="let review of reviews" class="col-md-3">
-                <div class="card mb-2">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ review.reviewOwner.name }}</h5>
-                        <p class="card-text">{{ review.description }}</p>
-                        <p>
-                            <span class="text-warning">
-                                <i *ngFor="let star of stars; let i = index"
-                                   [class.bi-star-fill]="i < review.rating"
-                                   [class.bi-star]="i >= review.rating"
-                                   class="bi"></i>
-                            </span>
-                            - {{ review.rating }}/5
-                        </p>
-                    </div>
-                </div>
+<div *ngIf="reviews.length>0" class="container mt-4">
+    <h3>Reseñas</h3>
+    <div class="scrolling-wrapper">
+        <div *ngFor="let review of reviews" class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{review.reviewOwner.name}}</h5>
+                <p class="card-text">{{review.description}}</p>
+                <p>
+                    <span class="text-warning">
+                        <i *ngFor="let star of stars; let i = index" 
+                        [class.bi-star-fill]="i < review.rating" 
+                        [class.bi-star]="i >= review.rating" 
+                        class="bi"></i>
+                    </span>
+                    - {{review.rating}}/5
+                </p>
             </div>
         </div>
-</div>
-
-
-<ng-template #noReviews>
-    <div class="text-center">
-        <h3 class="py-4 mb-4 defaultText text-secondary">No hay reseñas disponibles</h3>
     </div>
-</ng-template>
+    <hr>
+  
+  </div>
