--- a/frontend/src/app/components/user/profile/profile.component.html
+++ b/frontend/src/app/components/user/profile/profile.component.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div *ngIf="filter && !isAdmin">
+    <div *ngIf="filter">
         <!-- Reviews -->
         <app-profile-reviews *ngIf="filter === 'reviews' && profileId" [title]="'Reseñas'" [userId]="profileId">
         </app-profile-reviews>
