--- a/frontend/src/app/components/reports/report-list/report-list.component.html
+++ b/frontend/src/app/components/reports/report-list/report-list.component.html
@@ -18,9 +18,8 @@
           </div>
           <div>
             <button (click)="deleteReport(report.id)" class="btn btn-custom m-1">
-              <i class="bi bi-shield-fill-check"></i> Reporte resuelto
+              <i class="bi bi-shield-fill-check"></i> Resolver reporte
             </button>
-
             <a [routerLink]="['/product', report.product.id]" class="btn btn-custom m-1">
               <i class="bi bi-info-circle-fill"></i> Detalles
             </a>
